--- a/public/styles/tablet3.css
+++ b/public/styles/tablet3.css
@@ -5,6 +5,10 @@
     .association3 {
         width: 952px;
     }
+    #social_networks {
+      left: 335px;
+      top: -121px;
+    }
     .association1 {
         height: 1596px;
     }
