--- a/public/styles/style1.css
+++ b/public/styles/style1.css
@@ -34,6 +34,9 @@ body {
   padding: 0;
   font-family: 'WorkSans-Regular';
 }
+.nav-login {
+  display: none;
+}
 .wrap__header {
   width: 100%;
   background: transparent;
