--- a/public/styles/style4.css
+++ b/public/styles/style4.css
@@ -99,6 +99,7 @@
       -webkit-box-pack: start;
           -ms-flex-pack: start;
               justify-content: start;
+              margin-bottom: 20px;
 }
 .event-paragraph {
     font-family: 'WorkSans-Regular', Verdana, sans-serif;
@@ -117,8 +118,4 @@
 .events__button > p:nth-child(2) {
     flex-basis: 24.8%;
     margin-left: 30px;
-}
-.events__button > p:nth-child(3) {
-    flex-basis: 2.65%;
-    margin-left: 588px;
 }
