--- a/public/styles/style5.css
+++ b/public/styles/style5.css
@@ -59,4 +59,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+          position: relative;
+    left: 549px;
+    top: -148px;
 }
