--- a/public/styles/style6.css
+++ b/public/styles/style6.css
@@ -17,6 +17,7 @@
 }
 .footer__item4 {
   width: 60px;
+  display: none;
 }
 #login_foot {
   opacity: 0;
@@ -41,11 +42,12 @@
     top: -1069px;
 }
 .event-img2 {
-    position: absolute;
-    left: -314px;
-    width: 1;
-    height: auto;
-    top: -26px;
+      position: absolute;
+      height: auto;
+      top: -322px;
+      z-index: 1;
+      width: 100%;
+      height: 1273px;
 }
 .association1__about-title {
     font-family: "WorkSans-Bold";
