--- a/public/styles/phone12.css
+++ b/public/styles/phone12.css
@@ -6,6 +6,9 @@
   .tech_0_ai, .tech_0_dlt {
     width: 288px !important;
   }
+  .dubai_link {
+    height: 183px !important;
+  }
   .tech_0_ai {
     height: 736px !important;
   }
