--- a/public/styles/style11.css
+++ b/public/styles/style11.css
@@ -45,8 +45,16 @@
     margin-top: 30px;
 }
 .members__section2-img {
+    width: 100%
+}
+.members__section2-img {
+    width: 100%
+}
+.members__section2-item {
     width: 190px;
     height: 200px;
+    display: flex;
+    align-items: center;
 }
 .members__section2-btn {
     display: -webkit-box;
