--- a/public/styles/phone6.css
+++ b/public/styles/phone6.css
@@ -2,6 +2,7 @@
     .event__container {
         width: 286px;
         height: 983px;
+        z-index: 0;
     }
     .event-img {
         width: 286px;
