--- a/main.css
+++ b/main.css
@@ -4359,6 +4359,48 @@ body {
     display: grid;
     justify-items: center;
 }
+#img1 {
+    position: relative;
+    top: -33px;
+    grid-column: 1 / 3;
+    left: -20px;
+}
+#img4 {
+    grid-column: 5 / 6;
+    position: relative;
+    top: -23px;
+    left: 11px;
+    display: flex;
+    justify-content: end;
+}
+#img5 {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+#img9 {
+  position: relative;
+  left: 20px;
+}
+#img11 {
+  position: relative;
+  left: 82px;
+}
+#img12 {
+  position: relative;
+  left: 190px;
+}
+#img13 {
+  position: relative;
+  left: 234px;
+}
+.middle_top {
+  position: relative;
+  top: 40px;
+}
+.down_center {
+  display: flex;
+  align-items: center;
+}
 .lead__image {
     width: 100%;
     object-fit: contain;
@@ -4515,7 +4557,8 @@ body {
 }
 
 .concept-download {
-  display: block;
+  display: flex;
+  align-items: center;
   position: relative;
   width: 410px !important;
   left: 10px;
@@ -4569,12 +4612,19 @@ body {
 }
 
 .partners {
-  padding-left: 30px;
-  padding-right: 30px;
-  margin: 0 auto;
-  max-width: 1330px;
+  max-width: 1290px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 0px 22px;
 }
-
+.wrap_partners {
+    position: relative;
+    top: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 .partners__title {
   font-family: 'WorkSans-Bold';
   font-style: normal;
@@ -4582,6 +4632,9 @@ body {
   font-size: 45px;
   line-height: 53px;
   color: #FFFFFF;
+  grid-column: 1 / 6;
+  top: 45px;
+  position: relative;
 }
 
 .partners__wrapper {
@@ -4891,6 +4944,22 @@ body {
   }
 }
 
+@media (min-width: 768px) and (max-width: 1320px) {
+  #img2 {
+    grid-column: 3 / 6;
+  }
+  .partners {
+    max-width: 950px;
+  }
+  .partners__title {
+    display: flex;
+    justify-content: center;
+    margin-top: 0px;
+    font-size: 40px;
+    position: relative;
+    left: -119px
+  }
+}
 @media (min-width: 992px) and (max-width: 1320px) {
   .concept__title {
     display: flex;
@@ -4949,13 +5018,6 @@ body {
     width: 410px;
     height: 50px;
     margin-top: 20px;
-  }
-
-  .partners__title {
-    display: flex;
-    justify-content: center;
-    margin-top: 100px;
-    font-size: 40px;
   }
 
   .partners__descr {
