--- a/public/styles/style7.css
+++ b/public/styles/style7.css
@@ -54,6 +54,7 @@
     line-height: 140%;
     color: #FFFFFF;
     margin-bottom: 36.38px;
+    width: 319px;
 }
 .association2__sponsorships-btn {
     border: 2px solid #F6DBA8;
