--- a/public/styles/tablet4.css
+++ b/public/styles/tablet4.css
@@ -79,6 +79,7 @@
     .association2__sponsorships-pargraph {
         font-size: 18px;
         margin-bottom: 25px;
+        width: 280px;
     }
     .association2__sponsorships-pargraph br {
         display: none;
