--- a/public/styles/phone4.css
+++ b/public/styles/phone4.css
@@ -73,6 +73,7 @@
     .association2__sponsorships-pargraph {
         font-size: 16px;
         margin-bottom: 20px;
+        width: 204px;
     }
     .association2__sponsorships-btn {
         width: 205px;
